--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -1,3 +1,31 @@
-version https://git-lfs.github.com/spec/v1
-oid sha256:71a0b9fd08175907877a8a558c4a2af969523c74d324e049d0970330cf7f1e8a
-size 854
+<!doctype html>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="/css/main.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="header">
+        <div class="message">
+          <h1>Index</h1>
+          <a href="/transcribe.html">Transcribe</a>
+          <p />
+          <a href="/practise.html">Practise</a>
+          <p />
+          Sessions
+          <ul>
+            {% for session in sessions %}
+            <li>
+              {{ session.uuid }} {{ session.created_at }}
+              <a href="/transcript/{{session.uuid}}">Transcript</a>
+              <a href="/recordings/{{session.uuid}}.wav">Recording</a>
+              <a href="/compare/2/{{session.uuid}}/de">Compare (2, de)</a>
+            </li>
+            {% endfor %}
+          </ul>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
